server/k8s-prom/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 185.187.91.14.nip.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: stack-grafana
                port:
                  number: 80
